# instagramhs

./: .gitignore  Main.hs  Makefile  app.cabal  default.nix  hls.nix  instagram-scraper.cabal  musl.nix  nix-hls-wrapper.sh  nixpkgs.nix  package.yaml  routes  stack.yaml
app/: Main.hs
src/: Application.hs  Foundation.hs  Handlers.hs
