name:           instagram-scraper
version:        0.0.2
build-type:     Simple
cabal-version:  >= 1.10

executable instagramhs
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , bytestring
    , directory
    , http-client-tls
    , http-conduit
    , text
  default-language: Haskell2010
--  ld-options: -static
